@@ -1,14 +1,7 @@
-bin_PROGRAMS = tdspool
-tdspool_SOURCES	= config.c main.c member.c stream.c user.c util.c pool.h
-SERVERDIR		=	../server
+bin_PROGRAMS	=	tdspool
+tdspool_SOURCES	=	config.c main.c member.c stream.c user.c util.c pool.h
+SERVERDIR	=	../server
 INCLUDES	=	-I$(top_srcdir)/include -I. -I$(SERVERDIR)
-LDADD     =    ../tds/libtds.la ../server/libtdssrv.la
-EXTRA_DIST = BUGS pool.conf
-
-ETC	=	$(DESTDIR)/$(sysconfdir)
-
-install-data-local:
-	$(mkinstalldirs) $(ETC)
-	if test ! -f $(ETC)/pool.conf; then \
-		$(INSTALL_DATA) $(srcdir)/pool.conf $(ETC)/pool.conf; \
-	fi
+LDADD		=	../tds/libtds.la ../server/libtdssrv.la
+EXTRA_DIST	=	BUGS
+dist_sysconf_DATA	=	pool.conf
